[project]
name = "comfyui-allegro"
description = "ComfyUI supports over [a/rhymes-ai/Allegro](https://huggingface.co/rhymes-ai/Allegro), which uses text prompt to generate short video in relatively high quality, especially comparing to other open source solutions available for now."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["accelerate==0.33.0", "diffusers==0.28.0", "numpy==1.24.4", "torch==2.4.1", "tqdm==4.66.2", "transformers==4.40.1", "xformers==0.0.28.post1", "einops==0.7.0", "decord==0.6.0", "sentencepiece==0.1.99", "imageio", "imageio-ffmpeg", "ftfy", "bs4"]

[project.urls]
Repository = "https://github.com/bombax-xiaoice/ComfyUI-Allegro"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Allegro"
Icon = ""
